fix the overflow issue

--- a/styl.css
+++ b/styl.css
@@ -8,6 +8,7 @@ body {
 	background-color: #333;
 	position: relative;
 	overflow: hidden;
+	width: 100%;
 }
 
 header {
